# temp-x-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
backend/: Cargo.toml
backend/examples/: hf-hub-async.rs
backend/src/: document.rs  extractor.rs  lib.rs  main.rs
frontend/src/: main.rs
