[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Candle
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = [] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = [] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = [] }

# hf-hub
hf-hub = { version = "0.3.2", features = ["tokio"] }

# safetensors
safetensors = "0.4.3"
serde_json = "1.0.120"
tokenizers = "0.19.1"

# tokio
tokio = { version = "1.38.0", features = ["full"] }

# os 
walkdir = "2.5.0"
